# raytracer

./: README.md
Iterations/Iteration A/: CMakeLists.txt  README.txt  SundayAfternoon_6633spheres_1364x932.txt  Writeup.txt  elephant_class.ppm  elephant_class.txt  hotdogOnTable.ppm  hotdogOnTable.txt
Iterations/Iteration A/example images/: farsight.ppm  farsight.txt  large.ppm  large.txt  narrow.ppm  narrow.txt  nearsight.ppm  nearsight.txt  peripheral.ppm  peripheral.txt  sideways.ppm  sideways.txt  small.ppm  small.txt  straight.ppm  straight.txt  upsidedown.ppm  upsidedown.txt  wide.ppm  wide.txt
Iterations/Iteration A/extra images/: circleOfOvals.ppm  circleOfOvals.txt  hotdog.ppm  hotdog.txt
Iterations/Iteration A/src/: Color.cpp  Color.h  Ellipsoid.cpp  Ellipsoid.h  Object.cpp  Object.h  Sphere.cpp  Sphere.h  Vec3.cpp  Vec3.h  main.cpp
Iterations/Iteration B/: CMakeLists.txt  my scene.ppm  my scene.txt
Iterations/Iteration B/assign1bsamples/: assign1b_0.ppm  assign1b_0.txt  assign1b_1.ppm  assign1b_1.txt  assign1b_2.ppm  assign1b_2.txt
Iterations/Iteration B/example images/materials/: ambient only.ppm  ambient only.txt  color 1.ppm  color 1.txt  color 2.ppm  color 2.txt  color 3.ppm  color 3.txt  diffuse 1.ppm  diffuse 1.txt  diffuse 2.ppm  diffuse 2.txt  diffuse 3.ppm  diffuse 3.txt  diffuse 4.ppm  diffuse 4.txt  diffuse 5.ppm  diffuse 5.txt  specular 1.ppm  specular 1.txt  specular 2.ppm  specular 2.txt  specular 3.ppm  specular 3.txt  specular 4.ppm  specular 4.txt  specular color 1.ppm  specular color 1.txt  specular color 2.ppm  specular color 2.txt  specular color 3.ppm  specular color 3.txt
Iterations/Iteration B/example images/other/: ellipsoid.ppm  ellipsoid.txt  spotlight 1.ppm  spotlight 1.txt  spotlight 2.ppm  spotlight 2.txt  spotlight 3.ppm  spotlight 3.txt  spotlight over.ppm  spotlight over.txt  spotlight under.ppm  spotlight under.txt
Iterations/Iteration B/example images/shadows/: directional shadow.ppm  directional shadow.txt  far shadow.ppm  far shadow.txt  multi shadow.ppm  multi shadow.txt  near shadow.ppm  near shadow.txt
Iterations/Iteration B/src/: Color.cpp  Color.h  DirectionLight.cpp  DirectionLight.h  Ellipsoid.cpp  Ellipsoid.h  Light.cpp  Light.h  Material.cpp  Material.h  Object.cpp  Object.h  Parser.cpp  Parser.h  PointLight.cpp  PointLight.h  Sphere.cpp  Sphere.h  Spotlight.cpp  Spotlight.h  Vec3.cpp  Vec3.h  main.cpp
(+96 files in other folders)
